<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButtonStone"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="16dp"
        android:background="@color/ic_jo_kem_po_background"
        android:contentDescription="@string/image_button_stone"
        android:onClick="clickedOnTheButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonPaper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stone" />

    <ImageButton
        android:id="@+id/imageButtonScissors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/holo_blue_bright"
        android:contentDescription="@string/image_button_scissors"
        android:onClick="clickedOnTheButton"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonPaper"
        app:layout_constraintTop_toTopOf="@+id/imageButtonPaper"
        app:srcCompat="@drawable/scissors" />

    <ImageButton
        android:id="@+id/imageButtonPaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/image_button_paper"
        android:onClick="clickedOnTheButton"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonStone"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonScissors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonStone"
        app:layout_constraintTop_toTopOf="@+id/imageButtonStone"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/imageViewPlayer1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/image_view_player1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonStone"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPlayer2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage"
        app:srcCompat="@drawable/interrogation" />

    <ImageView
        android:id="@+id/imageViewPlayer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/image_view_player2"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlayer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlayer1"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlayer1"
        app:srcCompat="@drawable/interrogation" />

    <ImageView
        android:id="@+id/imageViewVS"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/image_view_vs"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonPaper"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPlayer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vs" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/imageViewVS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScoreboard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/diplomata"
        android:text="@string/scoreboard"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPlayer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScoreboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/diplomata"
        android:text="@string/scoreboard"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPlayer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>